Ensure splash skip is top of z-index stack so it can be pressed

--- a/contents/css/resume.screen.css
+++ b/contents/css/resume.screen.css
@@ -118,7 +118,11 @@
 
     height: 100vh;
     margin: 0px 0px;
+
+    z-index: 1;
   }
+
+  .resume__summary { z-index: 1; }
 
   .address {
     margin: 0px 0px var(--base-leading) 0px;
@@ -182,8 +186,6 @@
     width: 100%;
     height: 150vh;
 
-    z-index: -1;
-
     background-color: #353535;
   }
 
@@ -246,6 +248,8 @@
     bottom: 50vh;
     left: 0px;
     width: 100%;
+
+    z-index: 999;
 
     color: var(--body-neg-text-color);
 
